--- a/package.json
+++ b/package.json
@@ -1,44 +1,25 @@
 {
-  "name": "hosted-hubot",
-  "version": "2.8.0",
-  "author": "GitHub Inc.",
-  "keywords": [
-    "github",
-    "hubot",
-    "campfire",
-    "bot"
-  ],
-  "description": "A simple helpful robot for your Company",
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/github/hubot/raw/master/LICENSE"
-    }
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/github/hubot.git"
-  },
+  "name": "farva2.0",
+  "version": "0.0.0",
+  "private": true,
+  "author": "jsbojanglz@yahoo.com",
+  "description": "Fucking Slackbot's Mom",
   "dependencies": {
-    "cool-ascii-faces": "1.3.3",
-    "datejs": "1.0.0-rc3",
-    "github": "0.2.3",
-    "googlemaps": "0.1.20",
-    "hipchatter": "~0.1",
-    "hubot": "2.11.0",
-    "hubot-cron": "0.2.7",
-    "hubot-hipchat": "2.7.5",
-    "hubot-scripts": "2.5.16",
-    "moment": "2.9.0",
-    "mqtt": "^1.0.10",
-    "nodemailer": "1.3.0",
-    "promise": "6.1.0",
-    "request": "~2.51",
-    "underscore": "1.7.0",
-    "xml2js": "0.1.14"
+    "hubot": "^2.16.0",
+    "hubot-diagnostics": "0.0.1",
+    "hubot-google-images": "^0.2.1",
+    "hubot-google-translate": "^0.2.0",
+    "hubot-help": "^0.1.1",
+    "hubot-heroku-keepalive": "^1.0.0",
+    "hubot-maps": "0.0.2",
+    "hubot-pugme": "^0.1.0",
+    "hubot-redis-brain": "0.0.3",
+    "hubot-rules": "^0.1.1",
+    "hubot-scripts": "^2.16.2",
+    "hubot-shipit": "^0.2.0",
+    "hubot-slack": "^3.3.0"
   },
   "engines": {
-    "node": "0.10.30",
-    "npm": "2.1.8"
+    "node": "0.10.x"
   }
 }
